; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/display/dc/gpio/extr_gpio_service.c_dal_gpio_service_unlock.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/display/dc/gpio/extr_gpio_service.c_dal_gpio_service_unlock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gpio_service = type { i32* }

@GPIO_RESULT_OPEN_FAILED = common dso_local global i32 0, align 4
@GPIO_RESULT_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dal_gpio_service_unlock(%struct.gpio_service* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.gpio_service*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.gpio_service* %0, %struct.gpio_service** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %8 = load %struct.gpio_service*, %struct.gpio_service** %5, align 8
  %9 = getelementptr inbounds %struct.gpio_service, %struct.gpio_service* %8, i32 0, i32 0
  %10 = load i32*, i32** %9, align 8
  %11 = load i32, i32* %6, align 4
  %12 = zext i32 %11 to i64
  %13 = getelementptr inbounds i32, i32* %10, i64 %12
  %14 = load i32, i32* %13, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %19, label %16

16:                                               ; preds = %3
  %17 = call i32 @ASSERT_CRITICAL(i32 0)
  %18 = load i32, i32* @GPIO_RESULT_OPEN_FAILED, align 4
  store i32 %18, i32* %4, align 4
  br label %25

19:                                               ; preds = %3
  %20 = load %struct.gpio_service*, %struct.gpio_service** %5, align 8
  %21 = load i32, i32* %6, align 4
  %22 = load i32, i32* %7, align 4
  %23 = call i32 @set_pin_free(%struct.gpio_service* %20, i32 %21, i32 %22)
  %24 = load i32, i32* @GPIO_RESULT_OK, align 4
  store i32 %24, i32* %4, align 4
  br label %25

25:                                               ; preds = %19, %16
  %26 = load i32, i32* %4, align 4
  ret i32 %26
}

declare dso_local i32 @ASSERT_CRITICAL(i32) #1

declare dso_local i32 @set_pin_free(%struct.gpio_service*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
